[add]Add a script to run "php-cs-fixer fix"

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "fix": [
+            "./vendor/bin/php-cs-fixer fix"
         ]
     }
 }
