[fix]Fix the issue that php-cs-fixer is not executable using the composer script

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
             "@php artisan key:generate --ansi"
         ],
         "fix": [
-            "./vendor/bin/php-cs-fixer fix"
+            "php-cs-fixer fix"
         ]
     }
 }
