--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "chmod -R 775 public/"
+         ],
         "fix": [
             "php-cs-fixer fix"
         ]
