--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
         run: php artisan key:generate
+      - name: Clear and regenerate cache
+        run: php artisan config:cache
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
       - name: Execute Migration
