--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,4 +1,15 @@
 <?php
+$finder = PhpCsFixer\Finder::create()
+    ->exclude([
+        'app/Console',
+        'app/Exceptions',
+        'app/Providers',
+        'bootstrap',
+        'storage',
+        'vendor',
+    ])
+    ->in(__DIR__)
+;
 
 return PhpCsFixer\Config::create()
     ->setRiskyAllowed(true)
