[fix]php-cs-fixerの除外設定ミスを修正

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -126,8 +126,5 @@ return PhpCsFixer\Config::create()
         'whitespace_after_comma_in_array' => true,
         'yoda_style' => ['equal' => false, 'identical' => false],
     ])
-    ->setFinder(PhpCsFixer\Finder::create()
-        ->exclude('vendor')
-        ->in(__DIR__)
-    )
+    ->setFinder($finder);
     ;
