--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Copy .env
         run: cp .env.ci .env
+      - name: Add .env
+        run: echo ${{ secrets.Auth0 }} > .env
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
