--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Copy .env
         run: cp .env.ci .env
       - name: Add .env
-        run: echo ${{ secrets.Auth0 }} > .env
+        run: echo ${{ secrets.Auth0 }} >> .env
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
