--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches: [ master, develop ]
   pull_request:
     branches: [ master, develop ]
+env:
+  AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+  AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+  AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
 
 jobs:
   tests:
@@ -52,7 +56,7 @@ jobs:
           fail_ci_if_error: true
 
   php-cs-fixer:
-    
+
    runs-on: ubuntu-latest
    steps:
        - uses: actions/checkout@master
