--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ env:
   AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
   AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
   AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
+  PHP_CS_FIXER_IGNORE_ENV: 1
 
 jobs:
   tests:
@@ -30,6 +31,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Copy .env
         run: cp .env.ci .env
+      - name: Update Dependencies
+        run: composer update
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
