--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,9 @@ jobs:
       - name: Copy .env
         run: cp .env.ci .env
       - name: Update Dependencies
-        run: composer update
+        run: |
+          composer config -g --unset repos.packagist
+          composer update
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate key
