CI時全てのコミットを参照するように変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Copy .env
         run: cp .env.ci .env
       - name: Install Dependencies
